...
            uiState = KnownHostListUiState(
                knownHosts = listOf(
                    KnownHostListItem(
                        knownHost = KnownHost(
                            id = 1,
                            hostId = 1,
                            hostname = "example.com",
                            port = 22,
                            hostKeyAlgo = "ssh-ed25519",
                            hostKey = byteArrayOf(),
                        ),
                        fingerprint = "SHA256:exampleFingerprint",
                    ),
...
